manifestsFiles/reactAppManifestFiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: yashrajdighe/react_todo_app:V1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "40Mi"
            cpu: "100m"
          limits:
            memory: "80Mi"
            cpu: "150m"
