manifestsFiles/reactAppManifestFiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: "gce" # for GKE only
    kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: nginx # for nginx ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app
            port:
              number: 80
